# monique-worker-hs

./: CHANGELOG.md  README.md  monique-worker-hs.cabal  stack.yaml
app/: ExampleA.hs  ExampleAB.hs  ExampleB.hs  exampleA-config.json  exampleAB-config.json  exampleB-config.json
src/Network/Monique/: Worker.hs
src/Network/Monique/Worker/Internal/: App.hs  ForeignCall.hs  Queue.hs  Types.hs
