name:                monique-worker-hs
version:             0.2.0.3
synopsis:            Worker library for monique system
description:
  Worker library for monique system
homepage:            https://github.com/biocad/monique-worker-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2017, BIOCAD CBD
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Monique.Worker
  other-modules:       Network.Monique.Worker.Internal.Queue
                     , Network.Monique.Worker.Internal.App
                     , Network.Monique.Worker.Internal.Types
  build-depends:       base >= 4.7 && < 5
                     , monique-core
                     , aeson
                     , optparse-generic
                     , bytestring
                     , zeromq4-haskell
                     , text
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/biocad/monique-worker-hs
