name:                monique-worker-hs
version:             0.2.4.3
synopsis:            Worker library for monique system
description:
  Worker library for monique system
homepage:            https://github.com/biocad/monique-worker-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2017, BIOCAD CBD
category:            Network
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Monique.Worker
  other-modules:       Network.Monique.Worker.Internal.Queue
                     , Network.Monique.Worker.Internal.App
                     , Network.Monique.Worker.Internal.Types
                     , Network.Monique.Worker.Internal.ForeignCall
  build-depends:       base >= 4.7 && < 5
                     , monique-core
                     , aeson
                     , options
                     , bytestring
                     , zeromq4-haskell
                     , hslogger
                     , exceptions
                     , text
                     , mtl
                     , aeson-picker
  default-language:    Haskell2010

executable exampleA
  hs-source-dirs:      app
  main-is:             ExampleA.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monique-worker-hs
                     , aeson
                     , mtl
  default-language:    Haskell2010

executable exampleB
  hs-source-dirs:      app
  main-is:             ExampleB.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monique-worker-hs
                     , aeson
                     , mtl
  default-language:    Haskell2010

executable exampleAB
  hs-source-dirs:      app
  main-is:             ExampleAB.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monique-worker-hs
                     , monique-core
                     , aeson
                     , mtl
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/biocad/monique-worker-hs
